Added test chart

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #393E46;
 }
 
 .App-logo {
@@ -7,14 +8,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #222831;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +19,10 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.p-menubar {
+  background-color: #393E46 !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p-menuitem-text, .p-menuitem-icon {
+  color: #EEEEEE !important;
 }
